tests/agl/rejections/parse/chained_comparison.agl
let x = 1
let ok = (x = 1 = 2)
